Rename helper parameters to name the asserted API surface
The `(TensorType, TensorType)` and `MultiContext(Set<TensorType>, TensorType)`
overloads of `testHasLikelyTensorParameterHelper` used parameter names
(`layer1`/`layer2`, `contexts`/`inferred`) that described the lens rather
than the role. Every other parameter in the helper family follows the
`expected*` / `expecting*` house convention (e.g. `expectedSignature`,
`expectingHybridFunction`, `aTensorTypes`).

Rename the two outliers to name the API surface each value asserts against:

- `expectedParameterTensorType` — what `Parameter#getTensorTypes()` should
  contain per parameter.
- `expectedSignatureTensorType` — what `Function#inferInputSignature()`
  should yield per position in the signature.
- `expectedParameterTensorTypes` (Set form) for the multi-context overload.
- `expectedParameterTensorTypeContext1`/`Context2` for the per-context
  constituent expectations at the `testHasLikelyTensorParameter145` call
  site.

Apply the same rename to call-site locals in `testHasLikelyTensorParameter59`
and `testHasLikelyTensorParameter145` so the construction-site variable name
matches the formal parameter at the helper call.

Also convert the inline issue cross-references in fixture 59's Javadoc and
in the 2-arg overload's Javadoc from `<a href="URL">#NNN</a>` anchor tags
(or bare `#NNN`) to plain URLs—matches the house style for source-code
comments where the URL itself is the readable reference. `@see` tags in
other fixtures keep their anchor form (idiomatic for the Javadoc `@see`
cross-reference idiom).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>